ecmascript/parser/tests/test262-error-references/fail/8c353ce78b905b58.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/8c353ce78b905b58.js:1:5
  |
1 | `${a
  |     ^

